# pax-case

./: .gitignore  README.md  SCALING_STRATEGY.md  cli.py  gradio_demo.py  pyproject.toml
classification/makes/: StanfordDataset.py  StanfordViT.py  finetuning_siglip.py
classification/makes/lightning_logs/stanf-cars/version_0/: events.out.tfevents.1756405544.Mac.hsd1.pa.comcast.net  hparams.yaml
configs/: pipeline_config.yml
pipeline/: vision_pipeline.py
src/: cli.py
src/classification/cap/: cap_dataset.py  finetuning_siglip.py
src/classification/makes/: CarMakeDataset.py  SiglipClassifier.py  StanfordViT.py  finetuning_siglip.py  siglip_classifier.py
src/classification/objects/: clothes_classifier.py  object_classifier.py
src/classification/shirt/: finetuning_siglip.py  shirt_dataset.py
src/cli/: main.py
src/pipeline/: vision_pipeline.py
src/utils/: data_utils.py  utils.py
