[project]
name = "pax-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "fastapi[standard]>=0.116.1",
    "gradio>=5.44.1",
    "opencv-python>=4.11.0.86",
    "pathlib>=1.0.1",
    "pillow>=11.3.0",
    "pytorch-lightning>=2.5.3",
    "scikit-learn>=1.7.1",
    "tensorboardx>=2.6.4",
    "torchaudio>=2.8.0",
    "torchmetrics>=1.8.1",
    "transformers>=4.55.4",
    "ultralytics>=8.3.188",
    "uvicorn>=0.35.0",
]
[project.scripts]
detector = "cli:main"